Added no scroll in html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="libraries/p5.sound.js"></script>
     <script src="sketch.js"></script>
   </head>
-  <body>
+  <body scroll="no" style="overflow: hidden">
   </body>
 </html>
